18 Nov 2001 Add OPTION_IODELAY to bypass linux/zseries bug - Jan Jaeger
18 Nov 2001 Change OSTAILOR LINUX to reflect IEEE support - Jan Jaeger
18 Nov 2001 Add LCEBR/LCDBR/LCXBR IEEE float instructions - Jan Jaeger
16 Nov 2001 Reduce timer.c pthreads calls and logic isolation - Greg Smith
16 Nov 2001 Correct storage keys after ipl from cdrom - Jan Jaeger
16 Nov 2001 Added savecore command - Jan Jaeger
15 Nov 2001 RCHP and SCHM fixes for PIC 15 - Paul Leisy
13 Nov 2001 Fix MVPG so it gets PIC 04 when FPO on - Paul Leisy
13 Nov 2001 Fix CUSE when last byte is part of equality - Paul Leisy
13 Nov 2001 Fix halt and clear subchannel on CTC type devices - Jan Jaeger
13 Nov 2001 Fix logmsg macro to appear as a singular statement - Jan Jaeger
09 Nov 2001 Add HMC cdrom type IPL support - Jan Jaeger
09 Nov 2001 Fix hang in synchronize_broadcast - Greg Smith
09 Nov 2001 Make MODEL_DEPENDENT more specific with CS and STCM - Paul Leisy
08 Nov 2001 Correct/Remove OPTION_REDUCE_INVAL miss-spelling - Paul Leisy
05 Nov 2001 RP needs to INVALIDATE_AEA() since AR loaded - Paul Leisy
02 Nov 2001 Fix SQXR when iteration results are off by 1 - Paul Leisy
02 Nov 2001 Fix one IPTE bug by adding INVALIDATE_AxA() - Paul Leisy
31 Oct 2001 OPTION_FISHIO only if fthreads and not OPTION_SYNCIO - Fish
31 Oct 2001 'KillAllDeviceThreads' function disabled - Fish
31 Oct 2001 CTC Channel Command retry (contributed by Jim Pierson) - Fish
31 Oct 2001 Fix CFDR so overflow check done after rounding - Paul Leisy
31 Oct 2001 Fix MVCL so unused R1 and R2 bits zeroed - Paul Leisy
31 Oct 2001 Add "loadtext" panel command to load text decks - Paul Leisy
31 Oct 2001 Add "QUIET" ostailor option so all pgmtrace disabled - Paul Leisy
28 Oct 2001 Added WAKEUP_CPU call to stop/stopall commands in panel.c to
            fix "ipl rejected: All CPU's must be stopped" problem - Fish
28 Oct 2001 Various fixes to cardrdr.c - Fish
26 Oct 2001 Fix EX page cross, add INVALIDATA_AIA() - Juergen Dobrinski