@@ -33,6 +33,7 @@
 #undef  OPTION_CS_USLEEP                /* Sleep if CS collision     */
 #define OPTION_FAST_INTCOND             /* Ea CPU has intcond COND   */
 #define OPTION_IOINTQ                   /* I/O interrupt queue       */
+#define OPTION_SYNCIO                   /* Synchronous I/O option    */
 #undef  OPTION_IODELAY          /* 1000 ** IO delay in uSec          */
 #undef  OPTION_FOOTPRINT_BUFFER /* 2048 ** Size must be a power of 2 */
 #undef  OPTION_INSTRUCTION_COUNTING     /* First use trace and count */
