@@ -1,3 +1,4 @@
+18 Nov 2001 Synchronous I/O - Greg Smith
 18 Nov 2001 Add OPTION_IODELAY to bypass linux/zseries bug - Jan Jaeger
 18 Nov 2001 Change OSTAILOR LINUX to reflect IEEE support - Jan Jaeger
 18 Nov 2001 Add LCEBR/LCDBR/LCXBR IEEE float instructions - Jan Jaeger
